# Interpolering

./: CMakeLists.txt  Doxyfile  README.md
data/: data.txt
docs/html/: annotated.html  annotated_dup.js  class_point_collection.html  class_point_collection__coll__graph.md5  class_point_collection__inherit__graph.map  classes.html  classinterpolation_1_1_linear-members.html  classinterpolation_1_1_linear.html  classinterpolation_1_1_linear.js  classinterpolation_1_1_linear__coll__graph.map  classinterpolation_1_1_linear__coll__graph.md5  classinterpolation_1_1_polynomial-members.html  classinterpolation_1_1_polynomial.html  classinterpolation_1_1_polynomial.js  classinterpolation_1_1_polynomial__coll__graph.map  classinterpolation_1_1_polynomial__coll__graph.md5  classinterpolation_1_1_polynomial_a159e2044054e36051cd6532f5208a57c_cgraph.map  classinterpolation_1_1_polynomial_a159e2044054e36051cd6532f5208a57c_cgraph.md5  classinterpolation_1_1_polynomial_a4b6675cf5b7c36f711656456f09fb04d_icgraph.map  classinterpolation_1_1_polynomial_a4b6675cf5b7c36f711656456f09fb04d_icgraph.md5  data_8cpp.html  data_8cpp__incl.map  data_8cpp__incl.md5  data_8cpp_source.html  data_8h.html  data_8h.js  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h__incl.md5  data_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  (+69 more)
include/: data.h  interpolation.h  point.h  point_collection.h
src/: data.cpp  interpolation.cpp  main.cpp
(+22 files in other folders)
